@@ -12217,4 +12217,20 @@ Latest Mark: <unset>
     \P\Pabc
 No match
 
+/\btype\b\W*?\btext\b\W*?\bjavascript\b/IS
+Capturing subpattern count = 0
+No options
+First char = 't'
+Need char = 't'
+Subject length lower bound = 18
+No set of starting bytes
+
+/\btype\b\W*?\btext\b\W*?\bjavascript\b|\burl\b\W*?\bshell:|<input\b.*?\btype\b\W*?\bimage\b|\bonkeyup\b\W*?\=/IS
+Capturing subpattern count = 0
+No options
+No first char
+No need char
+Subject length lower bound = 8
+Starting byte set: < o t u 
+
 /-- End of testinput2 --/
